<resources>

    <!-- General -->
    <string name="app_name">Art Thief</string>
    <string name="date_format">EEEE MMM dd, yyyy, hh:mm a </string>
    <string name="not_available">N/E</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="taken">TAKEN</string>

    <!-- Action Bar -->
    <string name="action_settings">Settings</string>

    <!-- Tab Titles -->
    <string name="update_art_title">Update Art</string>
    <string name="rate_art_title">Rate Art</string>
    <string name="compare_art_title">Compare Art</string>
    <string name="the_show_title">The Show</string>
    <string name="vote_title">Vote</string>

    <!-- Tab Labels -->
    <string name="update_art_tab_label">Update</string>
    <string name="rate_art_tab_label">Rate</string>
    <string name="compare_art_tab_label">Compare</string>
    <string name="the_show_tab_label">Show</string>
    <string name="vote_tab_label">Vote</string>

    <!-- Update Art Work -->
    <string name="update_art_header">Art Thief</string>
    <string name="update_art_sub_header">Get a steal at the Art League\'s\n Patrons\' Show</string>
    <string name="update_art_last_update">Last update:</string>
    <string name="update_artworks_button_label">Update Artworks</string>
    <string name="loot_url">http://artthief.zurka.com/loot.json</string>
    <string name="update_artwork_success">Artworks updated</string>
    <string name="update_artwork_error">There was a problem updating artworks. Try again later</string>
    <string name="small_image_extension">S.jpg</string>
    <string name="large_image_extension">L.jpg</string>

    <!-- Rate Art Work -->
    <string name="artwork_title_text">(#) Artwork Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="media">Media</string>
    <string name="share_subject">Patrons\' Show Artwork</string>
    <string name="share_text">I really like this piece from the Art League\'s Patron\'s Show. #PatronsShow</string>
    <string name="prefer_text">Which one of these artworks at the Art League\'s Patron\'s Show do you prefer? #PatronsShow</string>
    <string name="artworks_empty_title">Update Artworks</string>
    <string name="artworks_empty_message">Go to the \'Update\' screen to download artworks</string>

    <!-- Artwork List Item -->
    <string name="artwork_list_item_artwork_image_description">Artwork Image</string>
    <string name="artwork_list_item_rating_star_image_description">Artwork Rating</string>

    <string name="artwork_show_id_label_text">(###)</string>
    <string name="artwork_title_label_text">Title</string>
    <string name="artwork_artist_label_text">Artist Name</string>
    <string name="artwork_media_label_text">Media</string>

    <!-- Compare Art -->
    <string name="compare_art_header">Fine Tune Your List</string>
    <string name="compare_art_sub_header">You\'ll be shown two artworks at a time that have the same rating. By simply indicating the artwork you prefer, the list will be sorted from most to least favorite.</string>
    <string name="compare_five_star_button_label">Five Stars (%d)</string>
    <string name="compare_four_star_button_label">Four Stars (%d)</string>
    <string name="compare_three_star_button_label">Three Stars (%d)</string>
    <string name="compare_two_star_button_label">Two Stars (%d)</string>
    <string name="compare_one_star_button_label">One Star (%d)</string>
    <string name="artworks_sorted">Artworks Sorted</string>

    <!-- Sort Art -->
    <string name="sort_artwork_title">Which do you prefer?</string>

    <!-- Star Integer Strings -->
    <string name="one_star">1</string>
    <string name="two_stars">2</string>
    <string name="three_stars">3</string>
    <string name="four_stars">4</string>
    <string name="five_stars">5</string>

    <!-- The Show -->
    <string name="id_edit_text">ID</string>

    <!-- The Show : Taken Button -->
    <string name="mark_taken">Mark Taken</string>
    <string name="mark_not_taken">Mark Not Taken</string>
    <string name="top_pick_text">Top Pick</string>

    <!-- The Show : Current Artwork Text -->
    <string name="enter_artwork_id">Enter an Artwork ID</string>
    <string name="artwork_taken">%s is taken</string>
    <string name="artwork_image_not_found">%s Image Not Found</string>
    <string name="no_top_pick">Rate Artworks in the "Rate" Tab</string>
    <string name="artwork_not_found">%s Not Found</string>

    <!-- Database Ordering -->
    <string name="ascending">ASC</string>
    <string name="descending">DESC</string>

    <!-- Loot -->
    <string name="art_works">artWorks</string>
    <string name="show_year">showYear</string>
    <string name="data_version">dataVersion</string>

    <!-- Vote Package JSON -->
    <string name="vote_package_key">package</string>
    <string name="vote_package_list">list</string>
    <string name="vote_package_art_thief_id">artthiefid</string>
    <string name="vote_package_show_id">showid</string>
    <string name="vote_package_rating">rating</string>
    <string name="vote_package_uuid">uuid</string>
    <string name="vote_package_scan_data">scanData</string>
    <string name="vote_url">http://artthief.zurka.com/vote/index.php</string>
    <string name="vote_success">Thank you. Your vote has been cast.</string>
    <string name="vote_error">There was a problem casting your vote. Try again later</string>
    <string name="cast_your_vote">Casting Your Vote</string>
    <string name="casting_vote">Casting Your Vote</string>
    <string name="transmit_vote_message">Would you like to transmit your favorite artworks to the Art League?</string>

</resources>